# job_search

./: README.md  api.py  api_config.py  api_factory.py  clean_data.py  config.py  create_chunks.py  database_setup.py  index.py  job_result_processor.py  llm_response.py  load_data.py  logger.py  main.py  pyproject.toml  qdrant.py  query_to_semantic_and_filter.py  remove_duplicate_from_result.py  retrieve_data_based_on_query.py  retrive_data_based_on_query.py  search_service.py  vector_database_setup.py
common/: __init__.py  base_config.py  exception.py  logger.py  qdrant_config.py  utils.py
data_ingestion/: __init__.py  config.py  create_chunks.py  ingestion.py  qdrant_client.py  vector_database_setup.py
search/: __init__.py  config.py  exceptions.py
search/routers/: __init__.py  search.py
search/schemas/: __init__.py  job_result.py  query_request.py  query_response.py
search/services/: __init__.py  llm_service.py  query_parser.py  search_service.py  vector_search.py
