[project]
name = "leapfrog-job-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.121.2",
    "google-generativeai>=0.8.5",
    "langchain-text-splitters>=1.0.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "qdrant-client[fastembed]>=1.15.1",
    "uvicorn[standard]>=0.38.0",
]
